kubernetes/overlays/dev/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: strip-slack-prefix

spec:
  stripPrefix:
    prefixes:
      - /api/0/slack
      - /api/1/slack
