kubernetes/overlays/dev/replicas.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: slack

spec:
    replicas: 0
