kubernetes/overlays/dev/gateway.yaml
---
# See more at https://istio.io/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: slack-gateway

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*/slack.statesman.pilgrimagesoftware.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*/slack.statesman.pilgrimagesoftware.com"
      tls:
        mode: PASSTHROUGH
